--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple API which demonstrates encryption and decryption with data storage on mongodb",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --forceExit"
   },
   "repository": {
     "type": "git",
